# gutenbergpy

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  gutenbergindex.db.sql  requirements.pip  setup.cfg  setup.py  test.py
gutenbergpy/: gutenbergcache.py  gutenbergcachesettings.py  orderedset.py  textget.py  utils.py
gutenbergpy/caches/: cache.py  gutenbergindex_indices.db.sql  mongodbcache.py  sqlitecache.py
gutenbergpy/parse/: book.py  cachefields.py  parseitem.py  parseitemfile.py  parseitemtitles.py  rdfparser.py  rdfparseresults.py
gutenbergpy/tests/: test.py
