[metadata]
name= gutenbergpy
author= Radu Angelescu
author_email = raduangelescu@gmail.com
version = 0.3.0
description-file = README.rst
url = https://github.com/raduangelescu/gutenbergpy
download_url = http://pypi.python.org/pypi/gutenbergpy
description = Library to create and interogate local cache for Project Gutenberg
license = LICENSE.txt
install_requires =
        future>=0.15.2
        httpsproxy-urllib2
        lxml>=3.2.0
        pymongo
        setuptools>=18.5