[metadata]
name= gutenbergpy
author= Radu Angelescu
author_email = raduangelescu@gmail.com
version = 0.3.5
description = Library to create and interogate local cache for Project Gutenberg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raduangelescu/gutenbergpy
download_url = http://pypi.python.org/pypi/gutenbergpy
project_urls =
    Bug Tracker = http://pypi.python.org/pypi/gutenbergpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = LICENSE.txt

[options]
install_requires =
        future>=0.15.2
        httpsproxy-urllib2
        lxml>=3.2.0
        pymongo
        setuptools>=18.5
        chardet
python_requires = >=3.6